product page changes

--- a/src/index.html
+++ b/src/index.html
@@ -32,7 +32,7 @@
 
   <!-- CSS will be injected by webpack here -->
   <!-- Preload link tags will be injected by webpack here -->
-
+<script>window.__theme = 'bs4';</script>
 </head>
 
 <body>
